# bazel-bep-proto

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE.bzlmod
.github/workflows/: publish.yml
